deployments/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rhythm8-prod
  labels:
    app: rhythm8
    environment: production
